# open-docs

./: .env.example  .gitignore  PROJECT_PLAN.md  README.md  agents.md  docker-compose.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260620_01_create_nexon_notice_events.py  20260621_01_add_is_active.py
apps/api/app/: main.py
apps/api/app/api/: router.py
apps/api/app/api/routes/: health.py  nexon.py
apps/api/app/core/: config.py  logging.py
apps/api/app/db/: __init__.py  base.py  session.py
apps/api/app/models/: __init__.py  base.py  nexon_notice.py
apps/api/app/scheduler/: __init__.py  scheduler.py
apps/api/app/schemas/: __init__.py  base.py  health.py  nexon_notice.py
apps/api/app/services/document/: __init__.py  document_service.py  service.py
apps/api/app/services/llm/: __init__.py  json_generator.py  markdown_generator.py  prompts.py  service.py
apps/api/app/services/nexon/: __init__.py  client.py  sync_service.py
apps/api/app/services/ocr/: __init__.py  prompts.py  service.py
apps/api/app/services/parser/: __init__.py  html_parser.py  image_extractor.py  service.py
apps/api/app/utils/: paths.py
apps/api/tests/: test_nexon_notice_active.py
apps/web/: Dockerfile  package-lock.json  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
docs/: README.md
infra/: README.md
